K3S & K8S/Grafana+Loki+Prometheus/Grafana/1.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring-stuff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      hostAliases:
      - ip: "149.154.167.220"
        hostnames:
        - "api.telegram.org"

      containers:
      - name: grafana
        image: grafana/grafana:11.6.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-datasource
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-storage
          mountPath: /var/lib/grafana
      volumes:
      - name: grafana-datasource
        configMap:
          name: grafana-datasource
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-data
