K3S & K8S/Grafana+Loki+Prometheus/Grafana/2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring-stuff
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    targetPort: 3000
